# ros2_so101

./: Dockerfile  Makefile  README.md  workspace.packages  workspace.repos
.devcontainer/: compose.yaml  devcontainer.json  post_create.sh
cartesian_teleoperation/: package.xml  setup.cfg  setup.py
cartesian_teleoperation/cartesian_teleoperation/: pose.py  teleoperation.py
cartesian_teleoperation/config/: controller_manager.yaml  libsurvive.json  ros2_controllers.yaml
cartesian_teleoperation/launch/: teleop.launch.py  vive.launch.py
scripts/: post_create.sh  ros_aliases.sh
so101_description/: CMakeLists.txt  package.xml
so101_description/config/: cartesian_controllers.yaml  cartesian_teleoperation.yaml  controller_manager.yaml  controllers.yaml  ros2_cartesian_controllers.yaml  ros2_controllers.yaml  so101_position.ros2_control.xacro
so101_description/control/: so101.ros2_control.xacro  so101_controllers.yaml
so101_description/launch/: bringup.launch.py  controllers_bringup.launch.py  display.launch.py
so101_description/rviz/: so101.rviz
so101_description/urdf/: initial_positions.yaml  so101.urdf.xacro  so101_new_calib.urdf.xacro
so101_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
so101_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_servo.yaml  so101.srdf
so101_moveit_config/launch/: moveit.launch.py
so101_moveit_config/rviz/: moveit.rviz
